syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetesnats.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetesnats/v1/spec.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetesnats/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//nats-kubernetes
message KubernetesNats {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesNats'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesNatsSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesNatsStatus status = 5;
}

//nats-kubernetes status
message KubernetesNatsStatus {
  //stack-outputs
  KubernetesNatsStackOutputs outputs = 1;
}
